# cpp_best_practices

./: .gitignore  LICENSE  README.md
chapter_03/: CMakeLists.txt  README.md
chapter_03/include/: custom_math_lib.hpp
chapter_03/src/: custom_math_lib.cc  main.cc
chapter_03/test/catch2_test/: test_sum.cc
chapter_03/test/doctest_test/: test_sum.cc
chapter_03/test/gtest_test/: test_sum.cc
chapter_05/: CMakeLists.txt  README.md
chapter_05/src/: main.cc
chapter_06/: CMakeLists.txt  README.md
chapter_06/src/: main.cc
chapter_07/: CMakeLists.txt  README.md
chapter_07/src/: main.cc
chapter_12/: README.md
chapter_12/src/: main.cc
chapter_13/: CMakeLists.txt  README.md
chapter_13/src/: main.cc
chapter_14/: CMakeLists.txt  README.md
chapter_14/src/: main.cc
chapter_15/: CMakeLists.txt  README.md
chapter_15/src/: main.cc
chapter_16/: CMakeLists.txt  README.md
chapter_16/src/: main.cc
chapter_17/: CMakeLists.txt  README.md
chapter_17/src/: main.cc
chapter_18/: CMakeLists.txt  README.md
chapter_18/src/: main.cc
chapter_20/: CMakeLists.txt  README.md
chapter_20/src/: main.cc
chapter_21/: CMakeLists.txt  README.md
chapter_21/src/: main.cc
chapter_22/: CMakeLists.txt  README.md
chapter_22/src/: main.cc
chapter_23/: CMakeLists.txt  README.md
chapter_23/src/: main.cc
chapter_24/: CMakeLists.txt  README.md
chapter_24/src/: main.cc
chapter_25/: CMakeLists.txt  README.md
chapter_25/src/: main.cc
chapter_26/: CMakeLists.txt  README.md
chapter_26/src/: main.cc
chapter_27/: CMakeLists.txt  README.md
chapter_27/src/: main.cc
chapter_28/: CMakeLists.txt  README.md
chapter_28/src/: main.cc
chapter_29/: CMakeLists.txt  README.md
chapter_29/src/: main.cc
chapter_30/: CMakeLists.txt  README.md
chapter_30/src/: main.cc
chapter_34/: CMakeLists.txt  README.md
chapter_34/src/: main.cc
chapter_35/: CMakeLists.txt  README.md
chapter_35/src/: main.cc
chapter_40/: CMakeLists.txt  README.md
chapter_40/src/: main.cc
chapter_50/: CMakeLists.txt  README.md
chapter_50/src/: main.cc
